Postulaciones voluntariado y padrino registran. Confirmar Validaciones. Modificaciones en los .zul(CAMBIOS ACTUALIZADOS)

--- a/WebContent/views/web/postulacionPadrino.zul
+++ b/WebContent/views/web/postulacionPadrino.zul
@@ -1,10 +1,11 @@
+
 <zk xmlns:n="native" xmlns:w="client">
 
 	<window width="80%" sclass="window-dialog"
 		action="show: slideIn;hide: slideOut"
-		use="ve.smile.web.viewmodels.VM_PostuladoPadrino"
+		use="ve.smile.web.postulacion.controllers.C_PostuladoPadrino"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.web.viewmodels.VM_Postulado', dialogData=arg.get('dialogData'))">
+		viewModel="@id('vm') @init('ve.smile.web.postulacion.viewmodels.VM_Postulado', dialogData=arg.get('dialogData'))">
 		
 		<n:link href="assets/css/web/postulacion.css" rel="stylesheet" type="text/css"></n:link>
 		
@@ -19,7 +20,21 @@
 					<div sclass="col s12 text-center">
 						<n:h6>Postulación de Padrino</n:h6>
 					</div>
+					
+					
 					<div sclass="col s8 form">
+					<div class="input-field col s6">
+							<n:label for="sexo" class="active">
+								Tipo de Persona
+							</n:label>
+							<combobox id="TPersona"
+								selectedItem="@bind(vm.tPersonaEnums)"
+								model="@bind(vm.tPersonaEnum)">
+								<template name="model">
+									<comboitem label="@bind(each)"/>
+								</template>
+							</combobox>
+						</div>
 						<div class="input-field col s6">
 							<n:label for="nombre">Nombre</n:label>
 							<textbox id="nombre" type="text"
@@ -27,29 +42,17 @@
 							</textbox>
 						</div>
 						<div class="input-field col s6">
+							<n:label for="apellido">Apellido</n:label><!-- no se muestra si el tipo es juridico, propiedad zk revisar visible -->
+							<textbox id="apellido" type="text"
+								value="@bind(vm.persona.apellido)">
+							</textbox>
+						</div>						
+						<div class="input-field col s6">
 							<n:label for="identificacion">Cedula</n:label>
 							<textbox id="identificacion" type="text"
 								value="@bind(vm.persona.identificacion)">
 							</textbox>
-						</div>
-						<div class="input-field col s6">
-							<n:label for="edad">Edad</n:label>
-							<textbox id="edad" type="text"
-								value="@bind(vm.persona.edad)">
-							</textbox>
-						</div>											
-						<div class="input-field col s6">
-							<n:label for="direccion">Dirección</n:label>
-							<textbox id="direcion" type="text"
-								value="@bind(vm.persona.direccion)">
-							</textbox>
-						</div>
-						<div class="input-field col s6">
-							<n:label for="correo">Correo</n:label>
-							<textbox id="correo" type="text"
-								value="@bind(vm.persona.correo)">
-							</textbox>
-						</div>
+						</div>										
 						<div class="input-field col s6">
 							<n:label for="sexo" class="active">
 								Sexo
@@ -63,17 +66,86 @@
 							</combobox>
 						</div>
 						<div class="input-field col s6">
-							<n:label for="fecha_nacimiento" class="active">Fecha de Nacimiento</n:label>
-							<datebox id="db" cols="20" format="yyyy/MM/dd"
-							 value="@bind(vm.persona.fechaNacimiento)"
-							 onCreate="self.value = new Date()"/>
-						</div>						
-						<div class="input-field col s6">
 							<n:label for="telefono_1">Telefono</n:label>
 							<textbox id="telefono_1" type="text"
 								value="@bind(vm.persona.telefono1)">
 							</textbox>
-						</div>																											
+						</div>						
+						<div class="input-field col s6">
+							<n:label for="fecha_nacimiento" class="active">Fecha de Nacimiento</n:label>
+							<datebox id="myFecha" cols="20" format="yyyy/MM/dd"
+							 value="@bind(vm.myFecha)"
+							/>
+						</div>						
+						<div class="input-field col s6">
+								<n:label class="active"
+									for="fk_estado">
+									Estado
+								</n:label>
+								<combobox id="fk_estado" readonly="true"
+									placeholder="Seleccione un Estado" instant="true"
+									onSelect="@command('changeEstado')" model="@bind(vm.estados)"
+									selectedItem="@bind(vm.estado)">
+									<template name="model">
+										<comboitem
+											label="@load(each.nombre)" />
+									</template>
+								</combobox>
+							</div>
+
+							<div class="input-field col s6">
+								<n:label class="active"
+									for="fk_ciudad">
+									Ciudad
+								</n:label>
+								<combobox id="fk_ciudad" readonly="true"
+									placeholder="Seleccione una ciudad"
+									disabled="@load(empty vm.ciudades)" model="@bind(vm.ciudades)"
+									selectedItem="@bind(vm.persona.fkCiudad)">
+									<template name="model">
+										<comboitem
+											label="@load(each.nombre)" />
+									</template>
+								</combobox>
+							</div>
+		
+						
+						<div class="input-field col s6">
+							<n:label for="direccion">Dirección</n:label>
+							<textbox id="direcion" type="text"
+								value="@bind(vm.persona.direccion)">
+							</textbox>
+						</div>
+						
+						<div class="input-field col s6">
+							<n:label for="correo">Correo</n:label>
+							<textbox id="correo" type="text"
+								value="@bind(vm.persona.correo)">
+							</textbox>
+						</div>
+						<div class="input-field col s6">
+								<n:label class="active"
+									for="fk_frecuenciaAporte">
+									Frecuencia Aporte
+								</n:label>
+								<combobox id="fk_frecuenciaAporte" readonly="true"
+									placeholder="Seleccione una frecuencia aporte"
+									disabled="@load(empty vm.frecuenciaAporte)" model="@bind(vm.frecuenciaAporte)"
+									selectedItem="@bind(vm.faporte)">
+									<template name="model">
+										<comboitem
+											label="@load(each.nombre)" />
+									</template>
+								</combobox>
+							</div>
+		
+							<div class="input-field col s6">
+							<n:label for="monto">monto</n:label>
+							<doublebox id="monto"
+								value="@bind(vm.padrino.monto)">
+							</doublebox>
+						</div>
+																																
 					</div>					
 					<div class="col s4 text-center">
 						<image src="/imagenes/portal/conejo.png"></image>
@@ -94,3 +166,5 @@
 	</window>
 
 </zk>
+
+
