--- a/WebContent/views/web/participa.zul
+++ b/WebContent/views/web/participa.zul
@@ -119,7 +119,7 @@
 									<n:br />
 									<n:br />
 									<div class="boton text-center" apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.web.viewmodels.VM_AbrirPostulado')">
+		viewModel="@id('vm') @init('ve.smile.web.postulacion.viewmodels.VM_AbrirPostulado')">
 										<button type="button"
 											class="waves-effect waves-light btn" href="" onClick="@command('abrirPostularVoluntario')">
 											POSTÚLATE
@@ -180,7 +180,7 @@
 	<n:br />
 		<n:br />
 									<div class="boton text-center" apply="org.zkoss.bind.BindComposer"
-										viewModel="@id('vm') @init('ve.smile.web.viewmodels.VM_AbrirPostulado')">
+										viewModel="@id('vm') @init('ve.smile.web.postulacion.viewmodels.VM_AbrirPostulado')">
 										<button type="button"
 											class="waves-effect waves-light btn" href="" onClick="@command('abrirPostularPadrino')">
 											POSTÚLATE
