--- a/WebContent/views/desktop/gestion/apadrinamiento/padrino/PadrinoFormBasic.zul
+++ b/WebContent/views/desktop/gestion/apadrinamiento/padrino/PadrinoFormBasic.zul
@@ -18,28 +18,19 @@
 				
 							<div class="input-field col s6">
 								<n:label for="frecuencia">Frecuencia de aporte</n:label>
-								<textbox id="frecuencia" type="text" value="@bind(vm.padrino.fkFrecuenciaAporte)"> </textbox>
+								<textbox id="frecuencia" type="text" value="@bind(vm.padrino.fkFrecuenciaAporte.nombre)"> </textbox>
 							</div>
 							
 							<div class="input-field col s6">
 								<n:label for="fecha_ingreso" class="active">Fecha de ingreso</n:label>
 								<datebox id="fecha_ingreso" cols="20" format="yyyy/MM/dd" value="@bind(vm.padrino.fechaIngreso)"/>
 							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="fecha_egreso" class="active">Fecha de egreso</n:label>
-								<datebox id="fecha_egreso" cols="20" format="yyyy/MM/dd" value="@bind(vm.padrino.fechaSalida)"/>
-							</div>
-							
 							<div class="input-field col s6">
 								<n:label for="monto" class="active">Monto</n:label>
 								<textbox id="monto" type="text" value="@bind(vm.padrino.monto)"> </textbox>
 							</div>
 							
-							<div class="input-field col s6">
-								<n:label for="condicion" class="active">Condición</n:label>
-								<textbox id="condicion" type="text" value="@bind(vm.padrino.estatusPostulado)"> </textbox>
-							</div>
+							
 		
 			</div>
 		</div>
