Maquetacion de la pagina de descarga de apk, tambien en el main se coloco participa de manera dinamica consumiendo servicios

--- a/WebContent/views/web/navbar.zul
+++ b/WebContent/views/web/navbar.zul
@@ -216,7 +216,7 @@
 					}
 				</attribute>
 			</a>
-			<a  href="#">
+			<a  href="#" onClick="@command('app')">
 				<label>Descargar App Móvil</label>
 			</a>
 			<a href="" onClick="@command('faq')">
