--- a/WebContent/views/web/main.zul
+++ b/WebContent/views/web/main.zul
@@ -261,46 +261,26 @@
 				</n:div>
 				<n:div id= "participa">
 					<div class="col s6" style="padding: 0;">
-						<div class="container-fluid"  >
+						<div class="container-fluid"   >
 							<div class="row">
 								<div align="center">    
 									<n:h4>PARTICIPA</n:h4>
 								</div>
-								<div class="col s12 seccion">
-									<div class="col s4">
-										<image class="img-responsive center-block" src="/imagenes/portal/icon/icon-voluntarios.png" width="128px" height="128px"></image>
-										<n:br></n:br>
-										<div class="subtitulo text-center">
-						           			<span>VOLUNTARIADO</span>
-						       			</div>
-						       			<div class="info block-ellipsis">
-									        <span>El Voluntariado de la Fundación Amigos del Niño con Cáncer  Lara (FANCA), lo integra un grupo de personas que de forma altruista están comprometidas con las acciones dirigidas a la atención integral a niños y  adolecentes con cáncer  y, su familia. La acción voluntaria debe ser solidaria, intencionada, organizada, sistemática y  respaldada por nuestros valores:
-						        			</span>
-							          	</div>
-									</div>
-									<div class="col s4">
-										<image class="img-responsive center-block" src="/imagenes/portal/icon/icon-padrinos.png" width="128px" height="128px"></image>					
-										<n:br></n:br>
-										<div class="subtitulo text-center">
-						           			<span>PADRINOS</span>
-						       			</div>
-						       			<div class="info block-ellipsis">
-						       				<span>Te brinda la oportunidad de participar en la recuperación de los niños con cáncer, de escasos recursos, mediante una colaboración monetaria para ayudarlos
-						        			</span>
-								        </div>
-									</div>
-									<div class="col s4">
-										<image class="img-responsive center-block" src="/imagenes/portal/icon/icon-donaciones.png" width="128px" height="128px"></image>
-										<n:br></n:br>
-										<div class="subtitulo text-center">
-						           			<span>DONACIONES</span>
-						       			</div>
-						       			<div class="info block-ellipsis">
-						       				<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-												sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
-						        			</span>
-							          	</div>
-									</div>
+								<div class="col s12 seccion" children="@load(vm.participacion)">
+									<template name="children">
+										<div class="col s4">
+											<image class="img-responsive center-block" src="@load(each.fkMultimedia.url)" width="128px" height="128px"></image>
+											<n:br></n:br>
+											<div class="subtitulo text-center">
+												<label value="@load(each.nombre)"></label>
+							       			</div>
+							       			<div class="info block-ellipsis">
+										        <label value="@load(each.descripcion)"></label>
+								          	</div>
+										</div>
+									</template>
+								
+									
 								</div>
 							</div>
 						</div>
