Modificaciones en la Gestion de Trabajo Social

--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/indicadores/IndicadoresTrabajoSocialPlanificadoIndex.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/indicadores/IndicadoresTrabajoSocialPlanificadoIndex.zul
@@ -2,7 +2,7 @@
 	<div class="wizard ${arg.animation_} container"
 		use="karen.core.simple_list.wizard.controllers.C_WindowWizard"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.trabajo_social.planificacion.registro.viewmodels.VM_TrabajoSocialPlanificadoRegistroIndex')">
+		viewModel="@id('vm') @init('ve.smile.gestion.trabajo_social.planificacion.indicadores.viewmodels.VM_IndicadoresTrabajoSocialPlanificadoIndex')">
 		<div class="row">
 			<div id="ulHeaderWizard"
 				use="karen.core.simple_list.wizard.buttons.containers.UlHeaderWizard">
