--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/registro/catalogoDirectorio.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/registro/catalogoDirectorio.zul
@@ -1,15 +1,19 @@
 <zk xmlns:n="native" xmlns:w="client">
 
-	<window width="80%" sclass="window-dialog" action="show: slideIn;hide: slideOut"
+	<window width="80%" sclass="window-dialog"
+		action="show: slideIn;hide: slideOut"
 		use="karen.core.dialog.catalogue.list_pagination.controllers.C_ListPaginationCatalogueDialog"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.trabajo_social.planificacion.viewmodels.VM_CatalogoDirectorio', dialogData=arg.get('dialogData'))">
-		<caption label="DIRECTORIO" style="margin-left: 40%;"/>
+		viewModel="@id('vm') @init('ve.smile.gestion.trabajo_social.planificacion.registro.viewmodels.VM_CatalogoDirectorio', dialogData=arg.get('dialogData'))">
+		<caption label="DIRECTORIO" style="margin-left: 40%;" />
 		<separator height="20px"></separator>
-		<n:h6 style="margin-left: 5%;">Por favor seleccione una dirección:</n:h6>
+		<n:h6 style="margin-left: 5%;">
+			Por favor seleccione una dirección:
+		</n:h6>
 		<separator height="20px"></separator>
 		<listbox id="listbox" model="@load(vm.objectList)"
-			selectedItem="@bind(vm.selectedObject)" style="width: 90%; margin-left: 5%;padding-bottom: 5%;">
+			selectedItem="@bind(vm.selectedObject)"
+			style="width: 90%; margin-left: 5%;padding-bottom: 5%;">
 
 			<listhead sizable="true">
 				<listheader label="Nombre" />
@@ -20,7 +24,8 @@
 			<template name="model">
 				<listitem>
 					<listcell label="@load(each.nombre)" />
-					<listcell label="@load(each.fkCiudad.fkEstado.nombre)" />
+					<listcell
+						label="@load(each.fkCiudad.fkEstado.nombre)" />
 					<listcell label="@load(each.fkCiudad.nombre)" />
 					<listcell label="@load(each.direccion)" />
 				</listitem>
@@ -35,10 +40,12 @@
 		<div sclass="div-buttons-dialog" style="padding-bottom: 2%;">
 			<div>
 				<button id="btnAccept" label="Seleccionar"
-					sclass="indigo waves-effect waves-light btn" iconSclass="fa fa-check">
+					sclass="indigo waves-effect waves-light btn"
+					iconSclass="fa fa-check">
 				</button>
 				<button id="btnCancel" label="Cancelar"
-					sclass="red waves-effect waves-light btn" iconSclass="z-icon-times">
+					sclass="red waves-effect waves-light btn"
+					iconSclass="z-icon-times">
 				</button>
 			</div>
 		</div>
